<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/head"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurfaceContainer"
        android:orientation="vertical"
        android:padding="8dp">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedChip="@+id/my_major"
            app:chipSpacingVertical="4dp"
            app:selectionRequired="true"
            app:singleLine="true"
            app:singleSelection="true">
            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/my_major"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_major"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/public_selection"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_selection"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/transdisciplinary"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transdisciplinary"/>
        </com.google.android.material.chip.ChipGroup>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:checkedChip="@+id/major_compulsory"
            app:chipSpacingVertical="4dp"
            app:selectionRequired="true"
            app:singleSelection="true">
            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/major_compulsory"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major_compulsory"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/major_selective"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major_selective"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/school_public_selective"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/school_public_selective"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/pe"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pe"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/en"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/en"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/public_compulsory"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/public_compulsory"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/honor"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/honor"/>
        </com.google.android.material.chip.ChipGroup>
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacingVertical="4dp">
            <com.google.android.material.chip.Chip
                style="@style/Widget.Material3.Chip.Assist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/hide_selected"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hide_selected"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/vacancy"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_by_vacancy"/><com.google.android.material.chip.Chip
            android:id="@+id/hide_vacancy"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_vacancy"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/only_collection"
                style="@style/Widget.Material3.Chip.Filter.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/only_collection"/>
            <com.google.android.material.chip.Chip
                android:id="@+id/add_filter"
                android:transitionName="miniapp"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_filter"
                app:chipIcon="@drawable/add"/>
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/course"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="0dp"
        android:paddingBottom="16dp"
        app:fastScrollEnabled="false"
        app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollHorizontalTrackDrawable="@drawable/scrollbar"
        app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
        app:fastScrollVerticalTrackDrawable="@drawable/scrollbar" />
</LinearLayout>